--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -12,6 +12,7 @@ section {
     align-items: center;
     justify-content: center;
     font-size: 3rem;
+    margin-top: 120px;
     width: 100%;
 }
 
