--- a/ressources/css/portfolio.css
+++ b/ressources/css/portfolio.css
@@ -94,6 +94,7 @@ article {
     align-items: center;
     justify-content: right;
     margin: 10px 0;
+    max-width: 1200px;
     width: 100%;
 }
 
