--- a/ressources/css/portfolio.css
+++ b/ressources/css/portfolio.css
@@ -1,5 +1,6 @@
 /* ARTICLES ------------------------------------------------------------------------ \
 \ --------------------------------------------------------------------------------- */
+
 h1 {
     font-size: 3rem;
     margin-bottom: 20px;
@@ -125,4 +126,20 @@ article {
 
 .contact {
     background: #fff957;
+}
+
+/* RESPONSIVE --------------------------------------------------------------------- \
+\ -------------------------------------------------------------------------------- */
+
+@media(max-width: 876px){
+
+    .resume{
+        flex-direction: column;
+    }
+
+    .left-resume{
+    margin-right: 0;
+    margin-bottom: 14px;
+}
+
 }
